<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		18_conversation
	 *	@date 		0
	 *	@title 		18_Conversation
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.2.8.xd
	 *
	 */
	-->
	<ScrollView android:id="@+id/18_conversation" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="667dp" >

			<View android:id="@+id/_bg___18_conversation"
				android:background="@drawable/_bg___18_conversation_shape"
				 android:layout_marginLeft="0dp"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="375dp"
				android:layout_height="667dp" />


			<RelativeLayout android:id="@+id/top"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View android:id="@+id/base"
					android:background="@drawable/base_shape"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="375dp"
					android:layout_height="178dp" />

				<ImageView android:id="@+id/back"
					android:src="@drawable/back"
					android:contentDescription="back"
					 android:layout_marginLeft="20dp"
					 android:layout_marginStart="20dp"
					android:layout_marginTop="36dp"
					android:layout_width="10.28564453125dp"
					android:layout_height="18dp" />


				<RelativeLayout android:id="@+id/sender"
					android:layout_marginTop="28dp"
					android:layout_marginStart="51dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/smiley_s_store"
						android:fontFamily="Neusa Next Std"
						android:textSize="15sp"
						android:textColor="@color/smiley_s_store_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="97dp"
						android:layout_height="23dp"
						android:text="@string/smiley_s_store_string"
						 />

					<TextView android:id="@+id/active"
						android:fontFamily="Neusa Next Std"
						android:textSize="12sp"
						android:textColor="@color/smiley_s_store_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="18dp"
						android:layout_width="35dp"
						android:layout_height="18dp"
						android:text="@string/active_string"
						 />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/icon"
					android:layout_marginTop="30dp"
					android:layout_marginStart="321dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View android:id="@+id/ellipse_12"
						android:background="@drawable/ellipse_12_shape"
						 android:layout_marginLeft="0dp"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="34dp"
						android:layout_height="34dp" />

					<TextView android:id="@+id/ss"
						android:fontFamily="Neusa Next Std"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="12sp"
						android:textColor="@color/ss_color"
						android:layout_marginLeft="8dp"
						android:layout_marginTop="8dp"
						android:layout_width="19dp"
						android:layout_height="18dp"
						android:text="@string/ss_string"
						 />

				</RelativeLayout>

				<ImageView android:id="@+id/line_4"
					android:src="@drawable/line_4"
					android:contentDescription="line_4"
					 android:layout_marginLeft="20dp"
					 android:layout_marginStart="20dp"
					android:layout_marginTop="79dp"
					android:layout_width="335dp"
					android:layout_height="1dp" />


				<RelativeLayout android:id="@+id/item"
					android:layout_marginTop="94dp"
					android:layout_marginStart="20dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>


					<RelativeLayout android:id="@+id/pic"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View android:id="@+id/rectangle_3"
							android:background="@drawable/rectangle_3_shape"
							 android:layout_marginLeft="0dp"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="69dp"
							android:layout_height="69dp" />

						<ImageView android:id="@+id/scarf_png48"
							android:src="@drawable/scarf_png48"
							android:contentDescription="scarf_png48"
							 android:layout_marginLeft="5dp"
							 android:layout_marginStart="5dp"
							android:layout_marginTop="7dp"
							android:layout_width="53.820068359375dp"
							android:layout_height="53.820068359375dp" />

					</RelativeLayout>

					<TextView android:id="@+id/red_cotton_scarf__2ft__dark_red"
						android:fontFamily="Neusa Next Std"
						android:textSize="15sp"
						android:textColor="@color/smiley_s_store_color"
						android:layout_marginLeft="84dp"
						android:layout_marginTop="23dp"
						android:layout_width="209dp"
						android:layout_height="23dp"
						android:text="@string/red_cotton_scarf__2ft__dark_red_string"
						 />

					<TextView android:id="@+id/order___1084028"
						android:fontFamily="Neusa Next Std"
						android:textSize="15sp"
						android:textColor="@color/smiley_s_store_color"
						android:layout_marginLeft="84dp"
						android:layout_marginTop="3dp"
						android:layout_width="124dp"
						android:layout_height="23dp"
						android:text="@string/order___1084028_string"
						 />

					<TextView android:id="@+id/__11_00"
						android:fontFamily="Neusa Next Std"
						android:textSize="15sp"
						android:textColor="@color/__11_00_color"
						android:layout_marginLeft="84dp"
						android:layout_marginTop="45dp"
						android:layout_width="49dp"
						android:layout_height="23dp"
						android:text="@string/__11_00_string"
						 />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/more"
					android:layout_marginTop="120dp"
					android:layout_marginStart="337dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View android:id="@+id/ellipse_11"
						android:background="@drawable/ellipse_11_shape"
						 android:alpha="0.20000000298023"
						 android:layout_marginLeft="0dp"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="18dp"
						android:layout_height="18dp" />

					<ImageView android:id="@+id/union_1"
						android:src="@drawable/union_1"
						android:contentDescription="union_1"
						 android:layout_marginLeft="4dp"
						 android:layout_marginStart="4dp"
						android:layout_marginTop="5dp"
						android:layout_width="8.48583984375dp"
						android:layout_height="8.485595703125dp" />

				</RelativeLayout>

			</RelativeLayout>


			<RelativeLayout android:id="@+id/message_bubble"
				android:layout_marginTop="235dp"
				android:layout_marginStart="8.368896484375dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<ImageView android:id="@+id/base_ek1"
					android:src="@drawable/base_ek1"
					android:contentDescription="base_ek1"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="216.630859375dp"
					android:layout_height="338.00048828125dp" />

				<TextView android:id="@+id/dear_customer__your_order_has_been_shipped__please_see_below_for_the_tracking_number___uh2983948935b__your_parcel_should_arrive_between_10___20_days___if_you_have_any_questions__please_contact_us_and_we_will_get_back_to_you_at_our_earliest____thank_you_for"
					android:fontFamily="Neusa Next Std"
					android:textSize="15sp"
					android:textColor="@color/dear_customer__your_order_has_been_shipped__please_see_below_for_the_tracking_number___uh2983948935b__your_parcel_should_arrive_between_10___20_days___if_you_have_any_questions__please_contact_us_and_we_will_get_back_to_you_at_our_earliest____thank_you_for_color"
					android:layout_marginLeft="29dp"
					android:layout_marginTop="10dp"
					android:layout_width="171dp"
					android:layout_height="327.5dp"
					android:text="@string/dear_customer__your_order_has_been_shipped__please_see_below_for_the_tracking_number___uh2983948935b__your_parcel_should_arrive_between_10___20_days___if_you_have_any_questions__please_contact_us_and_we_will_get_back_to_you_at_our_earliest____thank_you_for_string"
					 />

			</RelativeLayout>


			<RelativeLayout android:id="@+id/type_message"
				android:layout_marginTop="618dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View android:id="@+id/base_ek2"
					android:background="@drawable/base_ek2_shape"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="375dp"
					android:layout_height="49dp" />

				<TextView android:id="@+id/type_your_message___"
					android:fontFamily="Neusa Next Std"
					android:alpha="0.30000001192093"
					 android:textSize="15sp"
					android:textColor="@color/dear_customer__your_order_has_been_shipped__please_see_below_for_the_tracking_number___uh2983948935b__your_parcel_should_arrive_between_10___20_days___if_you_have_any_questions__please_contact_us_and_we_will_get_back_to_you_at_our_earliest____thank_you_for_color"
					android:layout_marginLeft="66dp"
					android:layout_marginTop="13dp"
					android:layout_width="141dp"
					android:layout_height="23dp"
					android:text="@string/type_your_message____string"
					 />


				<RelativeLayout android:id="@+id/add"
					android:layout_marginTop="12dp"
					android:layout_marginStart="20dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View android:id="@+id/ellipse_11_ek1"
						android:background="@drawable/ellipse_11_ek1_shape"
						 android:alpha="0.20000000298023"
						 android:layout_marginLeft="0dp"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="26dp"
						android:layout_height="26dp" />

					<ImageView android:id="@+id/union_1_ek1"
						android:src="@drawable/union_1_ek1"
						android:contentDescription="union_1_ek1"
						 android:layout_marginLeft="7dp"
						 android:layout_marginStart="7dp"
						android:layout_marginTop="7dp"
						android:layout_width="11.843994140625dp"
						android:layout_height="11.843994140625dp" />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/send"
					android:layout_marginTop="12dp"
					android:layout_marginStart="329dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View android:id="@+id/rectangle_2"
						android:background="@drawable/rectangle_2_shape"
						 android:layout_marginLeft="0dp"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="26dp"
						android:layout_height="26dp" />


					<RelativeLayout android:id="@+id/share_arrow"
						android:layout_marginTop="8dp"
						android:layout_marginStart="9dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>


						<RelativeLayout android:id="@+id/group_27"
							android:layout_marginTop="0dp"
							android:layout_marginStart="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<ImageView android:id="@+id/path_14"
								android:src="@drawable/path_14"
								android:contentDescription="path_14"
								 android:layout_marginLeft="-0dp"
								 android:layout_marginStart="-0dp"
								android:layout_marginTop="-0dp"
								android:layout_width="9.532470703125dp"
								android:layout_height="12.472412109375dp" />

						</RelativeLayout>

					</RelativeLayout>

				</RelativeLayout>

			</RelativeLayout>

			<TextView android:id="@+id/tuesday__9_20_am"
				android:fontFamily="Neusa Next Std"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:alpha="0.40000000596046"
				 android:textSize="14sp"
				android:textColor="@color/smiley_s_store_color"
				android:layout_marginLeft="132dp"
				android:layout_marginTop="197dp"
				android:layout_width="113dp"
				android:layout_height="22dp"
				android:text="@string/tuesday__9_20_am_string"
				 />

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>